update to my info

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -7,7 +7,7 @@
   <title>{{ page.title }}</title>
 
   <!-- TODO: change name and description -->
-  <meta name="author" content="Zach Holman" />
+  <meta name="author" content="Luke van der Hoeven" />
   <meta name="description" content="A fantastic blog that is fantastic." />
 
   <link rel="alternate" type="application/rss+xml" href="/atom.xml" />
@@ -19,7 +19,7 @@
   <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script type="text/javascript" src="/js/application.js"></script>
 </head>
 
@@ -27,21 +27,21 @@
   <section class="sidebar">
     <a href="/">
       <!-- TODO: change this gravatar URL -->
-      <img src="http://gravatar.com/avatar/6f63cde8b16b035280ca615f621a6c8c?s=150" height="75" width="75" class="avatar" />
+      <img src="http://www.gravatar.com/avatar/0945810eafa4ac5387084a7815488579.png" height="75" width="75" class="avatar" />
     </a>
 
     <!-- TODO: change name -->
     <section class="name">
       <a href="/">
-        <span id="zach">Zach</span>
-        <span id="holman">Holman</span>
+        <span id="luke">Luke</span>
+        <span id="vdh">van der Hoeven</span>
       </a>
     </section>
 
     <!-- TODO: change links -->
     <section class="meta">
-      <a href="https://github.com/holman"><img src="/images/github.png" /></a>
-      <a href="https://twitter.com/holman"><img src="/images/twitter.png"></a>
+      <a href="https://github.com/plukevdh"><img src="/images/github.png" /></a>
+      <a href="https://twitter.com/plukevdh"><img src="/images/twitter.png"></a>
       <a href="/atom.xml"><img src="/images/rss.png" /></a>
     </section>
 
